lib/stratiform/res/test/stratiform/corpus/pos/schema-with-flag.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name flag-example

document
  field active Flag
  field name String
